// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, isRequired: false, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
{
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: false, isRequired: false, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 1 1`] = `
{
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getFilterInputAriaAttributes() should return correct aria attributes for isOpen: true, isRequired: true, labelId: 'label-id', descriptionId: 'description-id', dropdownId: 'dropdown-id' and activeDescendantId: 0 1`] = `
{
  "aria-activedescendant": "option-0",
  "aria-autocomplete": "list",
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
  "aria-required": "true",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: false, optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false}] and hasFilter: true 1`] = `
{
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: false, optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true}] and hasFilter: false 1`] = `
{
  "aria-activedescendant": "option-1",
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: true, optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false}] and hasFilter: false 1`] = `
{
  "aria-label": "Some label",
  "aria-required": "true",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for label: 'Some label', isRequired: true, optionMaps: [{"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false},{"value":"Value 2","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true}] and hasFilter: true 1`] = `
{
  "aria-label": "Some label",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":true,"highlighted":true} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":true,"selected":false,"highlighted":false} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":true,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
{
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":true,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
{
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getSelectWrapperDropdownButtonAriaAttributes() should return correct aria attributes for isOpen: false, labelId: 'label-id', descriptionId: 'description-id' and dropdownId: 'dropdown-id' 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "false",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;

exports[`getSelectWrapperDropdownButtonAriaAttributes() should return correct aria attributes for isOpen: true, labelId: 'label-id', descriptionId: 'description-id' and dropdownId: 'dropdown-id' 1`] = `
{
  "aria-controls": "dropdown-id",
  "aria-describedby": "description-id",
  "aria-expanded": "true",
  "aria-haspopup": "listbox",
  "aria-labelledby": "label-id",
}
`;
